del anyOf from yaml generator
