# app/main.py
@@ -1,13 +1,15 @@
-from typing import Union
+from typing import Union, Optional
 
 from fastapi import FastAPI, HTTPException
 from database import create_connection
 from models import *
 
+from fastapi.routing import APIRoute
+
 app = FastAPI()
 
-@app.get('/languages', response_model=list[LanguageModel])
-def read_languages():
+@app.get('/languages', response_model=list[LanguageModel], operation_id="get_languages")
+def get_languages():
     connection = create_connection()
     cursor = connection.cursor(dictionary=True)
     try:
@@ -24,12 +26,13 @@ def read_languages():
     return result
 
 
-@app.get('/translations', response_model=list[TranslationModel])
-def read_translations(language: str):
+@app.get('/translations', response_model=list[TranslationModel], operation_id="get_translations")
+def get_translations(language: Optional[str] = None):
     connection = create_connection()
     cursor = connection.cursor(dictionary=True)
     try:
-        cursor.execute('''
+        params = []
+        sql = '''
             SELECT 
 				t.code        AS translation_code,
 				t.alias       AS translation_alias,
@@ -44,7 +47,11 @@ def read_translations(language: str):
 				a.is_music    AS audio_is_music
             FROM bible_translations AS t
             LEFT JOIN audio_voices  AS a ON a.bible_translation = t.code
-        ''')
+        '''
+        if language:
+            sql += " WHERE t.language = %s "
+            params.append(language)
+        cursor.execute(sql, params)
         rows = cursor.fetchall()
 		
         translations = {}
@@ -82,3 +89,14 @@ async def root():
     connection = create_connection()
     #cursor = connection.cursor(dictionary=True)
     return {"message": "Hello World"}
+
+def use_route_names_as_operation_ids(app: FastAPI) -> None:
+    """
+    Simplify operation IDs so that generated API clients have simpler function
+    names.
+
+    Should be called only after all routes have been added.
+    """
+    for route in app.routes:
+        if isinstance(route, APIRoute):
+            route.operation_id = route.name  # in this case, 'read_items'
